fixed the mixed aligned totals and numbers on the page.Also added padding to the last data element.

--- a/styles.css
+++ b/styles.css
@@ -119,5 +119,13 @@ section{
         padding:1rem 0 0.75rem;
         margin-right:-13.5rem;
       }
-    
+      tr.data td{
+        text-align:right;
+        vertical-align:top;
+        horizontally-align:right;
+        padding:0.3rem 0.25rem 0;
+      }
+      tr.data td:last-of-type{
+        padding-right:0.5rem;
+      }
  
